@@ -1,5 +1,6 @@
 Revision history for IPC::SRLock
 
+          - Updated Travis configuration and toolchain
           - Updated prereqs
           - Toolchain updates
 
